added db adapters

--- a/GA_TheTravelingSalesmanProblem.ipynb
+++ b/GA_TheTravelingSalesmanProblem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -12,6 +12,7 @@
     "from pyevolve import GSimpleGA\n",
     "from pyevolve import Selectors\n",
     "from pyevolve import Statistics\n",
+    "from pyevolve import DBAdapters\n",
     "from pyevolve import G1DList\n",
     "import math\n",
     "import random"
@@ -19,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,67 +72,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gen. 0 (0.00%): Max/Min/Avg Fitness(Raw) [1131.26(962.45)/763.39(923.95)/942.72(942.72)]\n",
-      "Gen. 10 (5.00%): Max/Min/Avg Fitness(Raw) [1156.02(964.63)/0.00(948.01)/988.55(963.35)]\n",
-      "Gen. 20 (10.00%): Max/Min/Avg Fitness(Raw) [1159.04(967.88)/0.00(950.47)/977.22(965.87)]\n",
-      "Gen. 30 (15.00%): Max/Min/Avg Fitness(Raw) [1160.32(968.81)/0.00(951.39)/984.04(966.93)]\n",
-      "Gen. 40 (20.00%): Max/Min/Avg Fitness(Raw) [1163.04(970.62)/0.00(954.86)/980.31(969.20)]\n",
-      "Gen. 50 (25.00%): Max/Min/Avg Fitness(Raw) [1164.23(971.70)/0.00(949.61)/988.23(970.19)]\n",
-      "Gen. 60 (30.00%): Max/Min/Avg Fitness(Raw) [1165.61(972.27)/0.00(951.53)/1050.88(971.34)]\n",
-      "Gen. 70 (35.00%): Max/Min/Avg Fitness(Raw) [1166.10(972.27)/0.00(955.16)/1087.38(971.75)]\n",
-      "Gen. 80 (40.00%): Max/Min/Avg Fitness(Raw) [1164.93(972.27)/0.00(952.50)/1040.04(970.78)]\n",
-      "Gen. 90 (45.00%): Max/Min/Avg Fitness(Raw) [1166.12(972.27)/0.00(953.52)/1082.99(971.76)]\n",
-      "Gen. 100 (50.00%): Max/Min/Avg Fitness(Raw) [1164.87(972.27)/0.00(950.05)/1027.31(970.72)]\n",
-      "Gen. 110 (55.00%): Max/Min/Avg Fitness(Raw) [1165.95(972.27)/0.00(959.85)/1062.37(971.63)]\n",
-      "Gen. 120 (60.00%): Max/Min/Avg Fitness(Raw) [1165.32(972.27)/0.00(954.08)/1042.25(971.10)]\n",
-      "Gen. 130 (65.00%): Max/Min/Avg Fitness(Raw) [1165.11(972.27)/0.00(953.51)/1043.04(970.93)]\n",
-      "Gen. 140 (70.00%): Max/Min/Avg Fitness(Raw) [1166.34(972.27)/0.00(963.49)/1087.53(971.95)]\n",
-      "Gen. 150 (75.00%): Max/Min/Avg Fitness(Raw) [1165.30(972.27)/0.00(952.50)/1041.71(971.08)]\n",
-      "Gen. 160 (80.00%): Max/Min/Avg Fitness(Raw) [1164.60(972.27)/0.00(950.05)/1025.45(970.50)]\n",
-      "Gen. 170 (85.00%): Max/Min/Avg Fitness(Raw) [1164.96(972.27)/0.00(952.50)/1031.16(970.80)]\n",
-      "Gen. 180 (90.00%): Max/Min/Avg Fitness(Raw) [1165.69(972.27)/0.00(956.04)/1068.01(971.41)]\n",
-      "Gen. 190 (95.00%): Max/Min/Avg Fitness(Raw) [1164.76(972.27)/0.00(945.78)/1013.56(970.63)]\n",
-      "Gen. 200 (100.00%): Max/Min/Avg Fitness(Raw) [1165.73(972.27)/0.00(954.02)/1052.20(971.44)]\n",
-      "Total time elapsed: 2.266 seconds.\n",
-      "- GenomeBase\n",
-      "\tScore:\t\t\t 972.271813\n",
-      "\tFitness:\t\t 1165.733802\n",
-      "\n",
-      "\tParams:\t\t {'rangemax': 13, 'rangemin': 0}\n",
-      "\n",
-      "\tSlot [Evaluator] (Count: 1)\n",
-      "\t\tName: fitness - Weight: 0.50\n",
-      "\tSlot [Initializator] (Count: 1)\n",
-      "\t\tName: G1DListTSPInitializator - Weight: 0.50\n",
-      "\t\tDoc:  The initializator for the genome \n",
-      "\tSlot [Mutator] (Count: 1)\n",
-      "\t\tName: G1DListMutatorSwap - Weight: 0.50\n",
-      "\t\tDoc:  The mutator of G1DList, Swap Mutator\n",
-      "   \n",
-      "   .. note:: this mutator is :term:`Data Type Independent`\n",
-      "\n",
-      "   \n",
-      "\tSlot [Crossover] (Count: 1)\n",
-      "\t\tName: G1DListCrossoverSinglePoint - Weight: 0.50\n",
-      "\t\tDoc:  The crossover of G1DList, Single Point\n",
-      "\n",
-      "   .. warning:: You can't use this crossover method for lists with just one element.\n",
-      "\n",
-      "   \n",
-      "\n",
-      "- G1DList\n",
-      "\tList size:\t 14\n",
-      "\tList:\t\t [9, 8, 10, 0, 1, 13, 2, 3, 4, 5, 11, 6, 12, 7]\n",
-      "\n",
-      "\n"
-     ]
+     "ename": "NameError",
+     "evalue": "name 'DBAdapters' is not defined",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-788a09d95f1a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0mga\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetElitism\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m \u001b[0msqlite_adapter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDBAdapters\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDBSQLite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midentify\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"TheTravelingSalesmanProblem\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m \u001b[0mga\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetDBAdapter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msqlite_adapter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'DBAdapters' is not defined"
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -252,7 +205,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -264,7 +219,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -275,5 +230,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
