--- a/GA_evo-string.ipynb
+++ b/GA_evo-string.ipynb
@@ -45,7 +45,7 @@
     "   best = ga.bestIndividual()\n",
     "   for i in range(0,len(best)):\n",
     "     print(chr(best[i]))\n",
-    "   return False\n"
+    "   return False"
    ]
   },
   {
@@ -103,7 +103,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
