--- a/GA_evo-list.ipynb
+++ b/GA_evo-list.ipynb
@@ -42,7 +42,7 @@
     "def current_best(ga_engine):\n",
     "   # Here you have access to the GA Engine\n",
     "   print ga.bestIndividual()\n",
-    "   return False\n"
+    "   return False"
    ]
   },
   {
@@ -3704,7 +3704,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -3716,7 +3718,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -3727,5 +3729,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
