begin report and use haversine formula

--- a/GA_TheTravelingSalesmanProblem.ipynb
+++ b/GA_TheTravelingSalesmanProblem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,22 @@
     "        self.lon = lon\n",
     "    \n",
     "    def distance(self, city2):\n",
-    "        return math.sqrt(math.fabs(self.lat - city2.lat) ** 2 + math.fabs(self.lon - city2.lon) ** 2)\n",
+    "        \"\"\"\n",
+    "        Calculates the distance between the current city and city2 using\n",
+    "        the Haversine formula \n",
+    "        \"\"\"\n",
+    "        lat1, lon1 = (self.lat, self.lon)\n",
+    "        lat2, lon2 = (city2.lat, city2.lon)\n",
+    "        radius = 6371 # km\n",
+    "        \n",
+    "        dlat = math.radians(lat2-lat1)\n",
+    "        dlon = math.radians(lon2-lon1)\n",
+    "        a = math.sin(dlat/2) * math.sin(dlat/2) + math.cos(math.radians(lat1)) \\\n",
+    "            * math.cos(math.radians(lat2)) * math.sin(dlon/2) * math.sin(dlon/2)\n",
+    "        c = 2 * math.atan2(math.sqrt(a), math.sqrt(1-a))\n",
+    "        d = radius * c\n",
+    "        return d\n",
+    "    \n",
     "    \n",
     "    def __repr__(self):\n",
     "        return \"{\" + str(self.lat) + \" \" + str(self.lon) + \"}\"\n",
@@ -67,24 +82,295 @@
     "def fitness(chromosome):    \n",
     "    chromosomeCities = map(lambda i: City(LAT[i], LON[i]), chromosome)\n",
     "\n",
-    "    return 1000 - travel(chromosomeCities)"
+    "    return 15000 - travel(chromosomeCities)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'DBAdapters' is not defined",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-788a09d95f1a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0mga\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetElitism\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m \u001b[0msqlite_adapter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDBAdapters\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDBSQLite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midentify\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"TheTravelingSalesmanProblem\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m \u001b[0mga\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetDBAdapter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msqlite_adapter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'DBAdapters' is not defined"
-     ],
-     "output_type": "error"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gen. 0 (0.00%):"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Max/Min/Avg Fitness(Raw) [10473.71(10943.93)/7089.53(6648.14)/8728.09(8728.09)]\nGen. 10 (5.00%):"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Max/Min/Avg Fitness(Raw) [13238.07(11164.40)/0.00(9288.82)/11369.63(11031.73)]\nGen. 20 (10.00%):"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Max/Min/Avg Fitness(Raw) [13557.16(11497.94)/0.00(9393.60)/11537.59(11297.63)]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gen. 30 (15.00%):"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Max/Min/Avg Fitness(Raw) [13702.61(11643.44)/0.00(9612.75)/11631.44(11418.85)]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gen. 40 (20.00%):"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Max/Min/Avg Fitness(Raw) [14051.00(11871.66)/0.00(10094.47)/11878.38(11709.17)]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gen. 50 (25.00%):"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Max/Min/Avg Fitness(Raw) [14183.62(11877.88)/0.00(9706.77)/13274.07(11819.68)]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gen. 60 (30.00%):"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Max/Min/Avg Fitness(Raw) [14265.94(11990.61)/0.00(9642.92)/12856.05(11888.28)]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gen. 70 (35.00%):"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Max/Min/Avg Fitness(Raw) [14355.68(12051.03)/0.00(10113.83)/12673.88(11963.06)]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gen. 80 (40.00%):"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Max/Min/Avg Fitness(Raw) [14277.11(12051.03)/0.00(9925.20)/12778.46(11897.59)]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gen. 90 (45.00%):"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Max/Min/Avg Fitness(Raw) [14398.75(12051.03)/0.00(10613.79)/13299.73(11998.96)]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gen. 100 (50.00%):"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Max/Min/Avg Fitness(Raw) [14260.85(12051.03)/0.00(9562.65)/12580.24(11884.04)]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gen. 110 (55.00%):"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Max/Min/Avg Fitness(Raw) [14368.80(12051.03)/0.00(10233.60)/13238.37(11974.00)]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gen. 120 (60.00%):"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Max/Min/Avg Fitness(Raw) [14296.52(12051.03)/0.00(10026.62)/12738.92(11913.77)]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gen. 130 (65.00%):"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Max/Min/Avg Fitness(Raw) [14288.92(12051.03)/0.00(10020.28)/12745.88(11907.43)]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gen. 140 (70.00%):"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Max/Min/Avg Fitness(Raw) [14424.74(12051.03)/0.00(11052.87)/13708.04(12020.61)]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gen. 150 (75.00%):"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Max/Min/Avg Fitness(Raw) [14308.03(12051.03)/0.00(9928.26)/12845.48(11923.36)]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gen. 160 (80.00%):"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Max/Min/Avg Fitness(Raw) [14230.02(12051.03)/0.00(9562.65)/12496.18(11858.35)]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gen. 170 (85.00%):"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Max/Min/Avg Fitness(Raw) [14288.80(12051.03)/0.00(9928.26)/12855.93(11907.34)]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gen. 180 (90.00%):"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Max/Min/Avg Fitness(Raw) [14330.96(12051.03)/0.00(9947.94)/13138.83(11942.47)]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gen. 190 (95.00%):"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Max/Min/Avg Fitness(Raw) [14269.24(12051.03)/0.00(9603.21)/12545.11(11891.03)]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gen. 200 (100.00%):"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Max/Min/Avg Fitness(Raw) [14332.24(12051.03)/0.00(10099.85)/12772.75(11943.53)]\nTotal time elapsed: 1.505 seconds.\n- GenomeBase\n\tScore:\t\t\t 12051.033871\n\tFitness:\t\t 14332.241861\n\n\tParams:\t\t {'rangemax': 13, 'rangemin': 0}\n\n\tSlot [Evaluator] (Count: 1)\n\t\tName: fitness - Weight: 0.50\n\tSlot [Initializator] (Count: 1)\n\t\tName: G1DListTSPInitializator - Weight: 0.50\n\t\tDoc:  The initializator for the genome \n\tSlot [Mutator] (Count: 1)\n\t\tName: G1DListMutatorSwap - Weight: 0.50\n\t\tDoc:  The mutator of G1DList, Swap Mutator\n   \n   .. note:: this mutator is :term:`Data Type Independent`\n\n   \n\tSlot [Crossover] (Count: 1)\n\t\tName: G1DListCrossoverSinglePoint - Weight: 0.50\n\t\tDoc:  The crossover of G1DList, Single Point\n\n   .. warning:: You can't use this crossover method for lists with just one element.\n\n   \n\n- G1DList\n\tList size:\t 14\n\tList:\t\t [9, 8, 10, 7, 0, 1, 2, 3, 4, 5, 11, 6, 12, 13]\n\n\n"
+     ]
     }
    ],
    "source": [
